fix: have posts align to grid when feed link missing (#16)
Hotfix to make the grid on the index page look good despite the missing follow link.

Reviewed-on: https://codeberg.org/jackie/jdaumeyer/pulls/16
Co-committed-by: Jackie <jacklynnnnnn@proton.me>

--- a/css/bloglist.css
+++ b/css/bloglist.css
@@ -10,6 +10,13 @@
 
 }
 
+.postlist {
+    @media (min-width: 768px) {
+	grid-column: 1 / 2;
+	grid-row: 2 / 3;
+    }
+}
+
 .taglist-wrapper {
     min-width: 20ch;
     /* grid-column-start: 2; */
